# algo-trading-infrastructure

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml
services/candle_builder/: Dockerfile  pyproject.toml  requirements.txt
services/candle_builder/src/: candle.py  main.py
services/compactor_ingestor/: Dockerfile  pyproject.toml  requirements.txt
services/compactor_ingestor/src/: cli.py  core.py  main.py
services/ingestor/: Dockerfile  pyproject.toml  requirements.txt
services/oanda_listener/: Dockerfile  pyproject.toml  requirements.txt
services/oanda_listener/src/: main.py
services/orchestrator/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
services/orchestrator/src/dbt_project/: dbt_project.yml  profiles.yml
services/orchestrator/src/dbt_project/macros/: external_location.sql
services/orchestrator/src/dbt_project/models/marts/: _schema.yml  gold_session_candles.sql  gold_session_patterns.sql  gold_session_stats.sql
services/orchestrator/src/dbt_project/models/staging/: _schema.yml  _sources.yml  stg_oanda_ticks.sql  stg_ohlc_d1.sql  stg_ohlc_h1.sql  stg_ohlc_h4.sql  stg_ohlc_m1.sql  stg_ohlc_m15.sql  stg_ohlc_m5.sql
services/orchestrator/src/dbt_project/tests/: assert_gold_session_candles_ohlc_invariants.sql  assert_gold_session_patterns_derived_metrics.sql  assert_gold_session_stats_derived_metrics.sql  assert_stg_oanda_ticks_ask_gt_bid.sql  assert_stg_ohlc_d1_ohlc_invariants.sql  assert_stg_ohlc_h1_ohlc_invariants.sql  assert_stg_ohlc_h4_ohlc_invariants.sql  assert_stg_ohlc_m15_ohlc_invariants.sql  assert_stg_ohlc_m1_ohlc_invariants.sql  assert_stg_ohlc_m5_ohlc_invariants.sql
services/orchestrator/src/orchestrator/: definitions.py  resources.py
services/orchestrator/src/orchestrator/assets/: compaction.py
services/orchestrator/src/orchestrator/defs/: dbt_assets.py  jobs.py  partitions.py  resources.py  schedules.py  sensors.py
services/orchestrator/src/orchestrator/defs/assets/: bronze_ticks.py  compaction.py  oanda_m1.py  oanda_ticks.py
services/orchestrator/src/orchestrator/lib/: compaction.py
services/shared/: config.py
services/stream_writer/: Dockerfile  pyproject.toml  requirements.txt
services/stream_writer/src/: main.py
services/transformer/: Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
src/ingest/: redis_writer.py
