[project]
name = "emergent-profit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stream-writer",
    "oanda-listener",
    "compactor-ingestor",
    "transformer",
    "dagster-dg>=0.26.14",
]

[tool.uv.workspace]
members = [
    "services/stream_writer",
    "services/oanda_listener",
    "services/compactor_ingestor",
    "services/transformer",
]

[tool.uv.sources]
stream-writer = { workspace = true}
oanda-listener = { workspace = true}
compactor-ingestor = { workspace = true}
transformer = { workspace = true}
