[project]
name = "emergent-profit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stream-writer",
    "oanda-listener",
    "candle-builder",
    "dagster-dg>=0.26.14",
]

[tool.uv.workspace]
members = [
    "services/stream_writer",
    "services/oanda_listener",
    "services/compactor_ingestor",
    "services/transformer",
    "services/candle_builder",
]

[tool.uv.sources]
stream-writer = { workspace = true}
oanda-listener = { workspace = true}
candle-builder = { workspace = true}
