[project]
name = "emergent-profit"
version = "0.2.0"
description = "Algorithmic trading infrastructure"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stream-writer",
    "oanda-listener",
    "candle-builder",
    "dagster-dg>=0.26.14",
]

[tool.uv.workspace]
members = [
    "services/stream_writer",
    "services/oanda_listener",
    "services/candle_builder",
]

[tool.uv.sources]
stream-writer = { workspace = true}
oanda-listener = { workspace = true}
candle-builder = { workspace = true}
