[project]
name = "orchestrator"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
]

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "orchestrator.definitions"
